Use Path.of(URI) instead of manual string wrangling.